k8s-go-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: k8s-go-app
spec:
 replicas: 2
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
     maxSurge: 1
 selector:
   matchLabels:
     app: k8s-go-app
 template:
   metadata:
     labels:
       app: k8s-go-app
   spec:
     containers:
       - name: k8s-go-app
         #IMPORTANT: provide your username here
         image: docker.io/fe4p3b/k8s-go-app:1.0.0
         imagePullPolicy: Always
         ports:
           - containerPort: 8080
         livenessProbe:
           httpGet:
             path: /__heartbeat__
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 15
           timeoutSeconds: 5
         readinessProbe:
           httpGet:
             path: /__heartbeat__
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 5
           timeoutSeconds: 1
