k8s-go-app/k8s/service.yaml
apiVersion: v1
kind: Service                   
metadata:
 name: k8s-go-app-srv
spec:
 type: NodePort                
 ports:                        
   - name: http
     port: 9090
     targetPort: 8080
 selector:
   app: k8s-go-app
